log_output/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 5001
      protocol: TCP
      targetPort: 3000
